used font-pie to prevent layout shift from font loading

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
   font-family: Caprasimo;
   font-style: normal;
@@ -5,4 +6,24 @@
   font-display: swap;
   src: url('../../fonts/Caprasimo-Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+*/
+
+@font-face {
+  font-family: Caprasimo;
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: url('Caprasimo-Regular.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'Caprasimo Fallback';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Arial');
+  ascent-override: 79.02%;
+  descent-override: 19.71%;
+  line-gap-override: 0.00%;
+  size-adjust: 116.17%;
 }
